--- a/Users/appsettings.json
+++ b/Users/appsettings.json
@@ -1,8 +1,13 @@
 {
+  "AllowedHosts": "*",
+  "Data": {
+    "SportStoreIdentity": {
+      "ConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=IdentityUsers;Trusted_Connection=True;MultipleActiveResultSets=true"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
